fix test action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
           path: ./
           key: ${{ github.sha }}
 
-      - name: Install jsonlint-cli
-        run: npm install -g jsonlint-cli
+      - name: Install jsonlint
+        run: npm install -g jsonlint
       - name: Lint json files
         run: for file in $(find . -name "*.json"); do jsonlint $file -c -q; done
